# shopfleet-notifications

./: Dockerfile  README.md  acp-manifest.json  architecture.md  pyproject.toml
.github/: copilot-instructions.md
app/: main.py
